--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.1",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-form": "^0.1.0",
+    "@radix-ui/react-popover": "1.1.2",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
